nginx: listen on 127.0.0.1

--- a/nginx.conf
+++ b/nginx.conf
@@ -12,7 +12,7 @@ http {
   resolver 8.8.8.8;
 
   server {
-    listen ${{PORT}};
+    listen 127.0.0.1:${{PORT}};
     lua_code_cache ${{CODE_CACHE}};
 
     location / {
