fix yml for test2

--- a/quiz/test2.yml
+++ b/quiz/test2.yml
@@ -6,7 +6,7 @@ questions:
   stars:
     Q: сколько звезд на небе?    # основной вопрос
     T: ночном                    # уточнение
-    A: 1 млн                     # прав ответ
+    A: "1 млн"                     # прав ответ
     W:
         - 10
         - 1000
