YAML: add question with multiple variants

--- a/quiz/test2.yml
+++ b/quiz/test2.yml
@@ -22,3 +22,20 @@ questions:
       - 3
       - 4
       - 5
+
+  mul:
+    Q: "перемножьте два числа:"
+    # несколько вариантов вопроса
+    variants:
+     - T: "2 и 2"
+       A: 4
+       W:
+         - 1
+         - 2
+         - 3
+     - T: "3 и 3"
+       A: 9
+       W:
+         - 5
+         - 6
+         - 7
