update quiz count_oligs

--- a/quiz/count_oligs.yml
+++ b/quiz/count_oligs.yml
@@ -1,13 +1,13 @@
 macros: 
- Q: сколько? 
- macros_id: "все ответы неправильные" 
+ Q: СЃРєРѕР»СЊРєРѕ? 
+ macros_id: "РІСЃРµ РѕС‚РІРµС‚С‹ РЅРµРїСЂР°РІРёР»СЊРЅС‹Рµ" 
 questions: 
  olpgs: 
-   Q: "сколько разных олигонуклеотидов" 
+   Q: "СЃРєРѕР»СЊРєРѕ СЂР°Р·РЅС‹С… РѕР»РёРіРѕРЅСѓРєР»РµРѕС‚РёРґРѕРІ" 
    variants: 
      - 
        A: 136 
-       T: "из 4-х пар комплементарных оснований?" 
+       T: "РёР· 4-С… РїР°СЂ РєРѕРјРїР»РµРјРµРЅС‚Р°СЂРЅС‹С… РѕСЃРЅРѕРІР°РЅРёР№?" 
        W: 
          - 256 
          - 128 
@@ -15,7 +15,7 @@ questions:
          - macros_id 
      - 
        A: 2080 
-       T: "из 6-и пар комплементарных оснований?" 
+       T: "РёР· 6-Рё РїР°СЂ РєРѕРјРїР»РµРјРµРЅС‚Р°СЂРЅС‹С… РѕСЃРЅРѕРІР°РЅРёР№?" 
        W: 
          - 4094 
          - 2048 
@@ -23,38 +23,38 @@ questions:
          - macros_id 
      - 
        A: 32896 
-       T: "из 8-и пар комплементарных оснований?" 
+       T: "РёР· 8-Рё РїР°СЂ РєРѕРјРїР»РµРјРµРЅС‚Р°СЂРЅС‹С… РѕСЃРЅРѕРІР°РЅРёР№?" 
        W: 
          - 65536 
          - 32768 
          - 65792 
          - macros_id 
  peptides: 
-   Q: "сколько разных пептидов" 
+   Q: "СЃРєРѕР»СЊРєРѕ СЂР°Р·РЅС‹С… РїРµРїС‚РёРґРѕРІ" 
    variants: 
      - 
        A: 160000 
-       T: "из 4-х аминокислотных остатков?" 
+       T: "РёР· 4-С… Р°РјРёРЅРѕРєРёСЃР»РѕС‚РЅС‹С… РѕСЃС‚Р°С‚РєРѕРІ?" 
        W: 
          - 80000 
          - 4 
-         - 320000 
+         - 24
          - macros_id 
      - 
        A: 3200000 
-       T: "из 5-и аминокислотных остатков?" 
+       T: "РёР· 5-Рё Р°РјРёРЅРѕРєРёСЃР»РѕС‚РЅС‹С… РѕСЃС‚Р°С‚РєРѕРІ?" 
        W: 
          - 1600000 
          - 5 
-         - 6400000 
+         - 120 
          - macros_id 
      - 
        A: 64000000 
-       T: "из 6-и аминокислотных остатков?" 
+       T: "РёР· 6-Рё Р°РјРёРЅРѕРєРёСЃР»РѕС‚РЅС‹С… РѕСЃС‚Р°С‚РєРѕРІ?" 
        W: 
          - 32000000 
          - 128000000 
-         - 6 
+         - 720 
          - macros_id 
 
 
