--- a/quiz/cw1-2.yml
+++ b/quiz/cw1-2.yml
@@ -1,97 +1,98 @@
-macros: 
- Q: сколько? 
- macros_id: "все ответы неправильные" 
-questions: 
- olpgs: 
-   Q: "сколько разных олигонуклеотидов" 
-   variants: 
-     - 
-       A: 136 
-       T: "из 4-х пар комплементарных оснований?" 
-       W: 
-         - 256 
-         - 128 
-         - 272 
-         - macros_id 
-     - 
-       A: 2080 
-       T: "из 6-и пар комплементарных оснований?" 
-       W: 
-         - 4094 
-         - 2048 
-         - 4160 
-         - macros_id 
-     - 
-       A: 32896 
-       T: "из 8-и пар комплементарных оснований?" 
-       W: 
-         - 65536 
-         - 32768 
-         - 65792 
-         - macros_id 
- peptides: 
-   Q: "сколько разных пептидов" 
-   variants: 
-     - 
-       A: "20^4" 
-       T: "из 4-х аминокислотных остатков?" 
-       W: 
-         - "1/2*20^4" 
-         - "4" 
-         - "4^(20)"       
-         - macros_id 
-     - 
-       A: "20^5" 
-       T: "из 5-и аминокислотных остатков?" 
-       W: 
-         - "1/2*20^5" 
-         - "5" 
-         - "5^(20)" 
-         - macros_id 
-     - 
-       A: "20^6" 
-       T: "из 6-и аминокислотных остатков?" 
-       W: 
-         - "1/2*20^5" 
+macros:
+ Q: СЃРєРѕР»СЊРєРѕ?
+ macros_id: "РІСЃРµ РѕС‚РІРµС‚С‹ РЅРµРїСЂР°РІРёР»СЊРЅС‹Рµ"
+
+questions:
+ olpgs:
+   Q: "СЃРєРѕР»СЊРєРѕ СЂР°Р·РЅС‹С… РѕР»РёРіРѕРЅСѓРєР»РµРѕС‚РёРґРѕРІ"
+   variants:
+     -
+       A: 136
+       T: "РёР· 4-С… РїР°СЂ РєРѕРјРїР»РµРјРµРЅС‚Р°СЂРЅС‹С… РѕСЃРЅРѕРІР°РЅРёР№?"
+       W:
+         - 256
+         - 128
+         - 272
+         - macros_id
+     -
+       A: 2080
+       T: "РёР· 6-Рё РїР°СЂ РєРѕРјРїР»РµРјРµРЅС‚Р°СЂРЅС‹С… РѕСЃРЅРѕРІР°РЅРёР№?"
+       W:
+         - 4094
+         - 2048
+         - 4160
+         - macros_id
+     -
+       A: 32896
+       T: "РёР· 8-Рё РїР°СЂ РєРѕРјРїР»РµРјРµРЅС‚Р°СЂРЅС‹С… РѕСЃРЅРѕРІР°РЅРёР№?"
+       W:
+         - 65536
+         - 32768
+         - 65792
+         - macros_id
+
+ peptides:
+   Q: "СЃРєРѕР»СЊРєРѕ СЂР°Р·РЅС‹С… РїРµРїС‚РёРґРѕРІ"
+   variants:
+     -
+       A: "20^4"
+       T: "РёР· 4-С… Р°РјРёРЅРѕРєРёСЃР»РѕС‚РЅС‹С… РѕСЃС‚Р°С‚РєРѕРІ?"
+       W:
+         - "1/2*20^4"
+         - "4"
+         - "4^(20)"
+         - macros_id
+     -
+       A: "20^5"
+       T: "РёР· 5-Рё Р°РјРёРЅРѕРєРёСЃР»РѕС‚РЅС‹С… РѕСЃС‚Р°С‚РєРѕРІ?"
+       W:
+         - "1/2*20^5"
+         - "5"
+         - "5^(20)"
+         - macros_id
+     -
+       A: "20^6"
+       T: "РёР· 6-Рё Р°РјРёРЅРѕРєРёСЃР»РѕС‚РЅС‹С… РѕСЃС‚Р°С‚РєРѕРІ?"
+       W:
+         - "1/2*20^5"
          - "6^(20)"
-         - "6" 
-         - macros_id 
+         - "6"
+         - macros_id
 
  revers_complement:
-   Q: "Напишите последовательность цепочки ДНК, комплементарной к " 
+   Q: "РќР°РїРёС€РёС‚Рµ РїРѕСЃР»РµРґРѕРІР°С‚РµР»СЊРЅРѕСЃС‚СЊ С†РµРїРѕС‡РєРё Р”РќРљ, РєРѕРјРїР»РµРјРµРЅС‚Р°СЂРЅРѕР№ Рє "
    variants:
      -
        A: "gatcat"
        T: "atgatc"
-       W: 
+       W:
          - "tactag"
          - "ctagta"
-         - macros_id 
+         - macros_id
      -
        A: "ctagat"
        T: "atctag"
-       W: 
+       W:
          - "tagatc"
          - "gatcta"
-         - macros_id 
+         - macros_id
      -
        A: "attgca"
        T: "tgcaat"
-       W: 
+       W:
          - "acgtta"
          - "taacgr"
-         - macros_id 
+         - macros_id
      -
        A: "tagatc"
        T: "gatcta"
-       W: 
+       W:
          - "ctagat"
          - "atctag"
-         - macros_id 
-
+         - macros_id
 
  chromosomes:
-   Q: "Сколько хромосом в ядре одной клетки человека"
+   Q: "РЎРєРѕР»СЊРєРѕ С…СЂРѕРјРѕСЃРѕРј РІ СЏРґСЂРµ РѕРґРЅРѕР№ РєР»РµС‚РєРё С‡РµР»РѕРІРµРєР°"
    variants:
      -
        A: 46
@@ -101,14 +102,15 @@ questions:
          - 24
          - 25
          - macros_id
+
  man_woman:
-   Q: "Чем отличаются наборы хромосом мужчины и женщины"
+   Q: "Р§РµРј РѕС‚Р»РёС‡Р°СЋС‚СЃСЏ РЅР°Р±РѕСЂС‹ С…СЂРѕРјРѕСЃРѕРј РјСѓР¶С‡РёРЅС‹ Рё Р¶РµРЅС‰РёРЅС‹"
    varinats:
      -
-      A: "X и Y у мужчин, две X у женщин"
+      A: "X Рё Y Сѓ РјСѓР¶С‡РёРЅ, РґРІРµ X Сѓ Р¶РµРЅС‰РёРЅ"
       T: "?"
       W:
-        - "46 у мужчин, 45 у женщин"
-        - "X и Y у женщин, две X у мужчин"
+        - "46 Сѓ РјСѓР¶С‡РёРЅ, 45 Сѓ Р¶РµРЅС‰РёРЅ"
+        - "X Рё Y Сѓ Р¶РµРЅС‰РёРЅ, РґРІРµ X Сѓ РјСѓР¶С‡РёРЅ"
         - macros_id
 
