fix typo in cw1-2.yml

--- a/quiz/cw1-2.yml
+++ b/quiz/cw1-2.yml
@@ -105,7 +105,7 @@ questions:
 
  man_woman:
    Q: "Чем отличаются наборы хромосом мужчины и женщины"
-   varinats:
+   variants:
      -
       A: "X и Y у мужчин, две X у женщин"
       T: "?"
